--- a/templates/login.html
+++ b/templates/login.html
@@ -99,7 +99,7 @@
             </div>
             <div class="card card2">
                 <div class="my-auto mx-md-5 px-md-5 right">
-                   <center> <h3 class="text-black">Time Series Forecasting</h3> </center>
+                    <h3 class="text-black">Time Series Forecasting</h3> 
                    <marquee behavior="alternate" direction="left" scrollamount="3" style="background-color:aquamarine"><small class="text-black">A time series is a sequence of observations taken sequentially in
                     time.</small></marquee> 
                 </div>
