--- a/templates/notify.html
+++ b/templates/notify.html
@@ -1,20 +1,9 @@
 {% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
 {% for category, message in messages %}
-{% if category == 'message' %}
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-{% else%}
-<div class="alert alert-{{category}} alert-dismissible fade show" role="alert">
-{% endif %}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <strong>{{ message }}</strong> 
-</div>
+<script>
+  $.notify("{{message}}", "{{category}}");
+</script>
 {% endfor %}
 {% endif %}
 {% endwith %}
-
-<script>
-  $(".alert").alert();
-</script>
