--- a/templates/train.html
+++ b/templates/train.html
@@ -27,22 +27,30 @@
 
 
 {% block body %}
-{% include "notify.html" %}
-<h3 class="text-center p-3">
-    <b style="color: rgb(242, 247, 250);">Get Ready to forecast</b>
-</h3>
-<div class="card shadow-lg m-5">
-    <div class="card-body">
-        {{session.col1}}
-        {{session.col2}}
-        {{session.filepath}}
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 mx-auto my-5">
+            <h3 class="text-center p-3">
+                <b style="color: rgb(242, 247, 250);">Get Ready to forecast</b>
+            </h3>
+            <div class="card shadow-lg m-5">
+                <div class="card-body">
+                    {{session.col1}}
+                    {{session.col2}}
+                    {{session.filepath}}
+                </div>
+                <div class="card-footer">
+                    <a href="/train_timeseries?x={{session.col1}}&y={{session.col2}}&f={{session.filepath}}"
+                        class="btn btn-block btn-danger">Train
+                        Timeseries model</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="card-footer">
-        <a href="/train_timeseries?x={{session.col1}}&y={{session.col2}}&f={{session.filepath}}"
-            class="btn btn-block btn-danger">Train
-            Timeseries model</a>
+    <div class="row">
+        <div class="col-md-10 mx-auto my-5">
+            <embed src="{{graphs.prediction_graph_1}}" width="100%" height="500px" />
+        </div>
     </div>
 </div>
-
 {% endblock body %}
