--- a/templates/login.html
+++ b/templates/login.html
@@ -3,45 +3,7 @@
 
 {% block body %}
 
-<!-- <style>
-    .mb-3{
-        font-family: 'Akaya Telivigala';font-size: 22px;
-    }
-</style>
 
-<div class="container">
-    <div class="row">
-        
-<div class="col-md-5 mx-auto">
-    <br><br>
-            <h3 class="text-center p-4">
-            <b style="color: rgb(242, 247, 250);">LOGIN </b>           
-            {% include "notify.html" %}
-
-            </h3>
-            <form method="post" class="card" style="background-color: rgb(26, 109, 168);">
-                <div class="card-body">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    
-                    <div class="mb-3">
-                        <label for="Password" class="form-label">Password</label>
-                        <input type="Password" class="form-control" id="Password" name="Password">
-                    </div>
-                    
-                    <div class="">
-                        <button type="submit" class="btn btn-primary"text-align="center">Submit</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    
-
-
-</div> -->
 
 <style>
     .row.justify-content-center.my-auto {
@@ -60,13 +22,10 @@
                 <div class="row justify-content-center my-auto">
                     <form method="post" class="col-md-8 col-10 my-5">
                         <div class="row justify-content-center px-3 mb-3">
-                            {% include "notify.html" %}
-                            <!-- <img id="logo" src="https://i.imgur.com/PSXxjNY.png"> -->
+                            <!-- {% include "notify.html" %} -->
+                       
                             <img id="logo" src="static/images/logo.png">
                         </div>
-                        <!-- <h3 class="mb-5 text-center heading">
-                            <b style=" color: rgb(26, 9, 210);" >Welcome to Predict </b> </h3>
-                        <p>The Time Series Forecasting</p> -->
 
                         <h4 class="msg-info"> Login to your account</h4>
 
